fix the alignment so they are consistently starting at the same top point

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -51,7 +51,11 @@ html, body, #root {
 }
 
 @each $color, $value in $theme-colors {
-  @include btn-custom($color)
+  @include btn-custom($color);
+}
+
+.pt-base {
+  padding-top: 6vw;
 }
 
 
@@ -183,4 +187,16 @@ input::placeholder {
 
 .w-40 {
   width: 40%;
+}
+
+
+.spinner-screen-wrapper {
+  width: 500px;
+  height: 200px;
+  margin: 0 auto;
+  top: 50%;
+  margin-top: -100px;
+  position: absolute;
+  left: 50%;
+  margin-left: -250px;
 }
